# Guardrails-using-LangChain

./: CONFIG.py  HITL_middleware.ipynb  buildin_guardrails.ipynb  custom_guardrail_before_agent_hook.ipynb  deepgram.py  deterministic_guardrails.ipynb  llm_guardrails.ipynb  pyproject.toml
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
